# ChangeLog for net-analyzer/scli
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.14 2012/09/23 19:08:33 ago Exp $

  23 Sep 2012; Agostino Sarubbo <ago@gentoo.org> scli-0.4.0.ebuild:
  Stable for amd64, wrt bug #409541

  23 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> scli-0.2.12.ebuild,
  scli-0.4.0.ebuild:
  ppc keywords dropped wrt #409541

  25 Jun 2011; Raúl Porcel <armin76@gentoo.org> scli-0.2.12.ebuild:
  Drop sparc keywords

  05 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org> scli-0.4.0.ebuild:
  Marked ~ppc wrt #369595

*scli-0.4.0 (01 Jun 2011)

  01 Jun 2011; Jeroen Roovers <jer@gentoo.org> +scli-0.4.0.ebuild:
  Version bump.

  26 Jan 2008; <pva@gentoo.org> scli-0.2.12.ebuild:
  Moved autotools stuff to src_unpack, bug #207466, thank Diego Pettenò
  <flameeyes AT gentoo.org> for report. Marked ~amd64.

  31 Oct 2006; Markus Ullmann <jokey@gentoo.org> scli-0.2.12.ebuild:
  Fixing automake stuff wrt bug #153256

  02 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; scli-0.2.12.ebuild:
  Keyword ~ppc.

  14 Aug 2006; Daniel Black <dragonheart@gentoo.org> scli-0.2.12.ebuild:
  WANT_AUTOCONF changed to 2.5 as per QA bug #143429

  09 Oct 2005; <mkay@gentoo.org> scli-0.2.12.ebuild:
  Fixing dependencies (bug #108118). Also - changing autoreconf to autoconf,
  which is enought for our patches

  19 Apr 2005; Aaron Walker <ka0ttic@gentoo.org> scli-0.2.12.ebuild:
  Marked stable on x86.

  12 Apr 2005; Jason Wever <weeve@gentoo.org> scli-0.2.12.ebuild:
  Added ~sparc keyword.

  28 Jan 2005; Aaron Walker <ka0ttic@gentoo.org>
  files/scli-0.2.12-fix-configure.diff:
  Removed acconfig.h patch-out from fix-configure patch; seems to be causing
  some funky weirdness.

*scli-0.2.12 (28 Jan 2005)

  28 Jan 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
  +files/scli-0.2.12-fix-configure.diff, +files/scli-0.2.12-gentoo.diff,
  +scli-0.2.12.ebuild: