@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/scli
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.14 2012/09/23 19:08:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/scli/ChangeLog,v 1.15 2012/09/24 02:05:49 jer Exp $
+
+*scli-0.4.0-r1 (24 Sep 2012)
+
+  24 Sep 2012; Jeroen Roovers <jer@gentoo.org> +scli-0.4.0-r1.ebuild:
+  Use append-cppflags not append-flags. Use $AR instead of harcoded ar by
+  Vicente Olivert Riera (bug #436008).
 
   23 Sep 2012; Agostino Sarubbo <ago@gentoo.org> scli-0.4.0.ebuild:
   Stable for amd64, wrt bug #409541
